# sdypy-view

./: README.rst  pyproject.toml  sync_version.py
.github/workflows/: pytest.yaml
docs/source/: conf.py
examples/: example1.py
sdypy/view/: __init__.py  pyvista_3D.py
